# adonai-client

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  schema.json  schema.py  tox.ini
.github/workflows/: publish.yml
adonai_client/: __init__.py  client.py  enum.py  exception.py  schema.py
