[tool.poetry]
name = "adonai-client"
version = "0.1.8"
description = "Client for adonai server"
authors = ["Aleksander Lavrov <egnod@ya.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sgqlc = "^9.1"
httpx = "^0.11.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
pre-commit = "^1.21"
bump2version = "^0.5.11"
sphinx = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
